@@ -1,6 +1,7 @@
 \name{TransformationAxes}
 \alias{basicPowerAxis}
 \alias{bcPowerAxis}
+\alias{bcnPowerAxis}
 \alias{yjPowerAxis}
 \alias{probabilityAxis}
 
@@ -25,6 +26,11 @@ bcPowerAxis(power, side=c("right", "above", "left", "below"),
     grid.lty=2,
     axis.title="Untransformed Data", cex=1, las=par("las"))
     
+bcnPowerAxis(power, shift, side=c("right", "above", "left", "below"), 
+    at, start=0, lead.digits=1, n.ticks, grid=FALSE, grid.col=gray(0.50), 
+    grid.lty=2,
+    axis.title="Untransformed Data", cex=1, las=par("las"))
+    
 yjPowerAxis(power, side=c("right", "above", "left", "below"), 
 	at, lead.digits=1, n.ticks, grid=FALSE, grid.col=gray(0.50), 
   grid.lty=2,
@@ -37,7 +43,8 @@ probabilityAxis(scale=c("logit", "probit"),
 }
 
 \arguments{
-  \item{power}{power for Box-Cox, Yeo-Johnson, or simple power transformation.}
+  \item{power}{power for Box-Cox, Box-Cox with negatives, Yeo-Johnson, or simple power transformation.}
+  \item{shift}{the shift (gamma) parameter for the Box-Cox with negatives family.}
   \item{scale}{transformation used for probabilities, \code{"logit"}
     (the default) or \code{"probit"}.}
   \item{side}{side at which the axis is to be drawn; numeric
@@ -76,6 +83,7 @@ probabilityAxis(scale=c("logit", "probit"),
       \eqn{x^{\prime }=(x^{\lambda }-1)/\lambda}{x' = (x^p - 1)/p} 
       for \eqn{\lambda \neq 0}{x != 0} and \eqn{x^{\prime }=\log x}{x' = log(x)} 
       for \eqn{\lambda =0}{p = 0}.}
+    \item{\code{bcnPowerAxis}:}{Box-Cox with negatives power transformation, the Box-Cox power transformation of \eqn{z = .5 * (y + (y^2 + \gamma^2)^{1/2})}, where \eqn{\gamma}{gamma} is strictly positive if \eqn{y}{y} includes negative values and non-negative otherwise.  The value of \eqn{z}{z} is always positive.}
     \item{\code{yjPowerAxis}:}{Yeo-Johnson power transformation, 
       for non-negative \eqn{x}{x}, the Box-Cox transformation of
       \eqn{x + 1}{x + 1}; for negative \eqn{x}{x}, the Box-Cox transformation of
@@ -127,5 +135,8 @@ probabilityAxis()
 
 with(UN, qqPlot(qnorm(infantMortality/1000)))
 probabilityAxis(at=c(.005, .01, .02, .04, .08, .16), scale="probit")
+
+qqPlot(bcnPower(Ornstein$interlocks, lambda=1/3, gamma=0.1))
+bcnPowerAxis(1/3, 0.1, at=c(o=0, 5, 10, 20, 40, 80))
 }
 \keyword{aplot}
